--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express": "^4.18.1",
     "pug": "^3.0.2",
     "socket.io": "^4.5.2",
+    "webrtc": "^1.14.1",
+    "webrtc-adapter": "^8.1.2",
     "ws": "^8.9.0"
   }
 }
